--- a/app/src/main/res/layout/activity_search_preview.xml
+++ b/app/src/main/res/layout/activity_search_preview.xml
@@ -7,6 +7,12 @@
         <variable
             name="activity"
             type="com.guidoperre.meli.ui.search_preview.SearchPreviewActivity" />
+        <variable
+            name="model"
+            type="com.guidoperre.meli.ui.search_preview.SearchPreviewViewModel" />
+        <variable
+            name="loading"
+            type="android.widget.ProgressBar" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -62,9 +68,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_tab"
+            android:id="@+id/cl_tab_top"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="60dp"
             android:background="@color/white"
             android:elevation="5dp"
             app:layout_constraintTop_toBottomOf="@+id/cl_buscador">
@@ -86,7 +92,7 @@
                 android:id="@+id/view"
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:layout_marginVertical="7dp"
+                android:layout_marginVertical="12dp"
                 android:layout_marginStart="15dp"
                 android:background="@color/gris_300"
                 app:layout_constraintStart_toEndOf="@+id/tv_resultados"/>
@@ -104,6 +110,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
@@ -115,6 +122,71 @@
                 app:layout_constraintEnd_toStartOf="@+id/swt_envio"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/tv_pagina"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/quicksand_regular"
+                android:text="@string/pagina"
+                android:textColor="@color/gris_700"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline2"
+                app:layout_constraintEnd_toStartOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/view"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_back_page"
+                android:layout_width="20dp"
+                android:layout_height="15dp"
+                android:contentDescription="@string/pasar_de_pagina"
+                android:padding="2dp"
+                android:rotation="180"
+                android:layout_marginEnd="10dp"
+                android:src="@mipmap/ic_semi_flecha_foreground"
+                android:focusable="true"
+                android:clickable="true"
+                android:onClick="@{(view) -> model.goBack(view, loading)}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_numero_pagina"
+                app:layout_constraintEnd_toStartOf="@+id/tv_numero_pagina"
+                app:layout_constraintTop_toTopOf="@+id/tv_numero_pagina" />
+
+            <TextView
+                android:id="@+id/tv_numero_pagina"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/quicksand_medium"
+                android:paddingBottom="2dp"
+                android:text="@string/uno"
+                android:textColor="@color/gris_700"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_pagina"
+                app:layout_constraintStart_toStartOf="@+id/tv_pagina"
+                app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+            <ImageView
+                android:id="@+id/iv_next_page"
+                android:layout_width="20dp"
+                android:layout_height="15dp"
+                android:layout_marginStart="10dp"
+                android:contentDescription="@string/pasar_de_pagina"
+                android:padding="2dp"
+                android:src="@mipmap/ic_semi_flecha_foreground"
+                android:focusable="true"
+                android:clickable="true"
+                android:onClick="@{(view) -> model.goNext(view, loading)}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_numero_pagina"
+                app:layout_constraintStart_toEndOf="@+id/tv_numero_pagina"
+                app:layout_constraintTop_toTopOf="@+id/tv_numero_pagina" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.5" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -123,7 +195,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cl_tab">
+            app:layout_constraintTop_toBottomOf="@+id/cl_tab_bot">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_search"
@@ -148,7 +220,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cl_tab" />
+            app:layout_constraintTop_toBottomOf="@+id/cl_tab_bot" />
 
         <ProgressBar
             android:id="@+id/pb_loading"
@@ -160,7 +232,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cl_tab" />
+            app:layout_constraintTop_toBottomOf="@+id/cl_tab_bot" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
