--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="verde_300">#E5F7ED</color>
     <color name="verde_500">#32BA77</color>
     <color name="azul_500">#3284F8</color>
+    <color name="azul_700">#2A327A</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
