--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,11 @@
     <color name="amarillo_500">#F5D415</color>
     <color name="gris_100">#FBFBFB</color>
     <color name="gris_300">#F2F2F2</color>
+    <color name="gris_400">#E1E1E1</color>
     <color name="gris_500">#B6B6B6</color>
+    <color name="gris_600">#A3A3A3</color>
     <color name="gris_700">#858585</color>
+    <color name="gris_900">#676767</color>
     <color name="verde_300">#E5F7ED</color>
     <color name="verde_500">#32BA77</color>
     <color name="azul_500">#3284F8</color>
