Implementacion product page parte 2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="amarillo_300">#FFDB13</color>
     <color name="amarillo_500">#F5D415</color>
     <color name="gris_100">#FBFBFB</color>
+    <color name="gris_200">#EDEDED</color>
     <color name="gris_300">#F2F2F2</color>
     <color name="gris_400">#E1E1E1</color>
     <color name="gris_500">#B6B6B6</color>
