--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -56,7 +56,6 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:fontFamily="@font/quicksand_regular"
-                    android:text="Nuevo"
                     android:textColor="@color/gris_500"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +78,6 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:fontFamily="@font/quicksand_regular"
-                    android:text="112 vendidos"
                     android:textColor="@color/gris_500"
                     android:textSize="12sp"
                     app:layout_constraintStart_toEndOf="@+id/view2"
@@ -93,7 +91,6 @@
                     android:ellipsize="end"
                     android:layout_margin="10dp"
                     android:fontFamily="@font/quicksand_medium"
-                    android:text="Logo de mercadolibre"
                     android:textColor="@color/gris_900"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +110,7 @@
                         android:layout_width="12dp"
                         android:layout_height="12dp"
                         android:contentDescription="@string/review_star"
-                        android:src="@mipmap/ic_estrella_azul_foreground"
+                        android:src="@mipmap/ic_estrella_gris_foreground"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -124,7 +121,7 @@
                         android:layout_height="12dp"
                         android:layout_marginStart="5dp"
                         android:contentDescription="@string/review_star"
-                        android:src="@mipmap/ic_estrella_azul_foreground"
+                        android:src="@mipmap/ic_estrella_gris_foreground"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/iv_estrella_1"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -135,7 +132,7 @@
                         android:layout_height="12dp"
                         android:layout_marginStart="5dp"
                         android:contentDescription="@string/review_star"
-                        android:src="@mipmap/ic_estrella_azul_foreground"
+                        android:src="@mipmap/ic_estrella_gris_foreground"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/iv_estrella_2"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -171,36 +168,18 @@
                     android:layout_margin="10dp"
                     android:paddingBottom="2dp"
                     android:fontFamily="@font/quicksand_regular"
-                    android:text="(23)"
                     android:textColor="@color/gris_500"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                     app:layout_constraintStart_toEndOf="@+id/constraintLayout"
                     app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
 
-                <ImageView
-                    android:id="@+id/iv_foto"
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/pg_foto"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
+                    android:layout_height="250dp"
                     android:layout_marginTop="10dp"
-                    android:src="@mipmap/ic_mercado_libre_foreground"
-                    android:contentDescription="@string/product_images"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-
-                <TextView
-                    android:id="@+id/tv_cantidad_fotos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:fontFamily="@font/quicksand_regular"
-                    android:text="1/2"
-                    android:paddingHorizontal="7dp"
-                    android:paddingVertical="2dp"
-                    android:background="@drawable/background_cantidad_fotos"
-                    android:textColor="@color/gris_700"
-                    android:textSize="12sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/iv_foto" />
 
                 <TextView
                     android:id="@+id/tv_precio"
@@ -208,11 +187,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:fontFamily="@font/quicksand_regular"
-                    android:text="$ 500"
                     android:textColor="@color/gris_700"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_foto" />
+                    app:layout_constraintTop_toBottomOf="@+id/pg_foto" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_product_tag"
@@ -248,7 +226,6 @@
                     android:fontFamily="@font/quicksand_regular"
                     android:background="@drawable/background_product_tag"
                     android:backgroundTint="@color/gris_300"
-                    android:text="150 disponibles"
                     android:textColor="@color/gris_700"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -274,7 +251,7 @@
                     android:fontFamily="@font/quicksand_regular"
                     android:text=""
                     android:textColor="@color/gris_700"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />
 
@@ -295,11 +272,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_informacion_producto"
-                    app:spanCount="2"
                     tools:listitem="@layout/item_product_info" />
+
+                <TextView
+                    android:id="@+id/tv_sin_informacion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:fontFamily="@font/quicksand_regular"
+                    android:text="@string/no_hay_informacion_del_producto"
+                    android:textColor="@color/gris_700"
+                    android:textSize="14sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_informacion_vendedor"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/rv_product_info" />
 
                 <TextView
                     android:id="@+id/tv_informacion_vendedor"
@@ -324,7 +314,6 @@
                     android:fontFamily="@font/quicksand_regular"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
-                    android:text="Caseros, Buenos Aires"
                     android:textColor="@color/gris_700"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -351,7 +340,6 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
                             android:fontFamily="@font/quicksand_medium"
-                            android:text="1509"
                             android:textColor="@color/azul_500"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -389,8 +377,7 @@
                     android:fontFamily="@font/quicksand_medium"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
-                    android:text="Mercadolibre Gold"
-                    android:textColor="@color/verde_500"
+                    android:textColor="@color/azul_500"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cardView" />
@@ -425,7 +412,21 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_ultimas_respondidas"
-                    tools:listitem="@layout/item_pregunta" />
+                    tools:listitem="@layout/item_question" />
+
+                <TextView
+                    android:id="@+id/tv_sin_preguntas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:fontFamily="@font/quicksand_regular"
+                    android:text="@string/todavia_no_hay_preguntas"
+                    android:textColor="@color/gris_700"
+                    android:textSize="14sp"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_ultimas_respondidas" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
