--- a/app/src/main/res/layout/item_product_info.xml
+++ b/app/src/main/res/layout/item_product_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
@@ -7,17 +8,55 @@
     </data>
 
 
-    <TextView
-        android:id="@+id/tv_product_tag"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center|start"
-        android:fontFamily="@font/quicksand_medium"
-        android:paddingVertical="10dp"
-        android:paddingStart="10dp"
-        android:background="@color/gris_300"
-        android:textColor="@color/gris_900"
-        android:textSize="12sp"
-        tools:ignore="RtlSymmetry" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_attribute_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/gris_300"
+            android:fontFamily="@font/quicksand_medium"
+            android:gravity="center|start"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingVertical="10dp"
+            android:paddingStart="10dp"
+            android:textColor="@color/gris_900"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:id="@+id/tv_attribute_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/gris_400"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:fontFamily="@font/quicksand_medium"
+            android:gravity="center|start"
+            android:paddingVertical="10dp"
+            android:paddingStart="10dp"
+            android:textColor="@color/gris_900"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline4"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
