--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -23,7 +23,7 @@
             android:fontFamily="@font/quicksand_medium"
             android:text="@string/p"
             android:textColor="@color/gris_900"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,9 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/quicksand_regular"
-            android:text="¿Esto es una pregunta?"
             android:textColor="@color/gris_700"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/tv_p"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,13 +42,13 @@
             android:id="@+id/tv_r"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/quicksand_medium"
             android:text="@string/r"
             android:textColor="@color/gris_900"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_pregunta" />
+            app:layout_constraintTop_toTopOf="@+id/tv_respuesta" />
 
         <TextView
             android:id="@+id/tv_respuesta"
@@ -57,12 +56,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/quicksand_regular"
-            android:text="Esto es una respuesta"
             android:textColor="@color/gris_700"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_p"
-            app:layout_constraintTop_toBottomOf="@+id/tv_p" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_pregunta" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
