--- a/app/src/main/res/layout/item_product_picture.xml
+++ b/app/src/main/res/layout/item_product_picture.xml
@@ -9,26 +9,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gris_200">
-
-        <TextView
-            android:id="@+id/tv_cantidad_fotos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/background_cantidad_fotos"
-            android:fontFamily="@font/quicksand_regular"
-            android:paddingHorizontal="7dp"
-            android:paddingVertical="2dp"
-            android:text="1/2"
-            android:textColor="@color/gris_700"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/gris_100">
 
         <ImageView
             android:id="@+id/iv_picture"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/product_images"
             app:layout_constraintEnd_toEndOf="parent"
